# Mini-Template-Engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  constraints-dev.txt  mini_template_engine_docs.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
Schema/: README.md  ast.schema.json  cli-options.schema.json  context.schema.json  filter-registry.schema.json  template-source.schema.json  token.schema.json
benchmarks/: render_bench.py  results.json
docs/: PYPI.md  api.md  grammar.md  reflection.md  render-lifecycle.md
docs/adr/: 0001-tree-walking-interpreter.md  0002-autoescaping-on-by-default.md  0003-no-arbitrary-python-expressions.md  0004-library-core-over-framework-first.md  0005-single-file-templates-only.md
docs/notes/: Mini Template Engine.txt  mini_template_engine_improved_full_scope.txt
examples/: conditions.tmpl  context.json  hello.tmpl  invoice.tmpl  loop.tmpl  run_all.sh  showcase.tmpl
scripts/: demo.ps1  test.ps1  test.sh
template_engine/: __init__.py  __main__.py  _version.py  cli.py  context.py  debug.py  errors.py  escape.py  expressions.py  filters.py  lexer.py  nodes.py  parser.py  renderer.py  template.py  tokens.py
tests/: __init__.py  conftest.py  test_audit_regressions.py  test_cli.py  test_cli_coverage.py  test_cli_helpers.py  test_cli_unit.py  test_comprehensive.py  test_context.py  test_correctness.py  test_coverage_final.py  test_debug.py  test_engine_edges.py  test_errors.py  test_errors_format.py  test_escape.py  test_examples.py  test_expression_branches.py  test_expressions.py  test_expressions_coverage.py  test_filters.py  test_lexer.py  test_parser.py  test_parser_context_coverage.py  test_property.py  test_read_template.py  test_remaining_coverage.py  test_renderer.py  test_security.py  test_template_facade.py
tests/pytest/: test_api_exports.py  test_coverage_gaps.py  test_exhaustive_cli.py  test_exhaustive_context.py  test_exhaustive_debug.py  test_exhaustive_escape_errors_tokens.py  test_exhaustive_expressions.py  test_exhaustive_filters.py  test_exhaustive_lexer.py  test_exhaustive_parser.py  test_exhaustive_renderer.py  test_exhaustive_template.py  test_features_integration.py  test_parser_edge_cases.py
tests/support/: custom_filters.py
