[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-template-engine"
version = "0.1.0"
description = "A pure Python mini template engine with a lexer, parser, AST, renderer, and CLI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Princeton Afeez", email = "196327+PrincetonAfeez@users.noreply.github.com" }]
keywords = ["template", "engine", "jinja", "html", "lexer", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "coverage>=7.0",
    "hypothesis>=6.0",
    "mypy>=1.8",
    "pre-commit>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "twine>=5.0",
]

[project.scripts]
template-engine = "template_engine.cli:main"

[project.urls]
Homepage = "https://github.com/PrincetonAfeez/Mini-Template-Engine"
Repository = "https://github.com/PrincetonAfeez/Mini-Template-Engine"
Documentation = "https://github.com/PrincetonAfeez/Mini-Template-Engine#readme"
Issues = "https://github.com/PrincetonAfeez/Mini-Template-Engine/issues"
Changelog = "https://github.com/PrincetonAfeez/Mini-Template-Engine/blob/main/CHANGELOG.md"
"PyPI" = "https://pypi.org/project/mini-template-engine/"

[tool.setuptools]
packages = ["template_engine"]

[tool.setuptools.package-data]
template_engine = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "SIM117", "B017"]
"benchmarks/**" = ["F841"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["template_engine"]
exclude = ["benchmarks"]

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false

[tool.coverage.run]
source = ["template_engine"]
omit = ["template_engine/__main__.py"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: end-to-end template rendering scenarios",
    "cli: command-line interface tests",
]
